recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:5: error: illegal start of simple expression
    tree(steps-1,length(),)
                          ^Tree:10: error: ')' expected but '}' found.
  }
  ^